[package]
name = "jo"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
documentation = "https://docs.rs/jo/"
repository = "https://github.com/yuulive/jo/"
license = "MIT OR Apache-2.0"
description = "Jo is a Rust macro for ensuring non-parallel execution of functions."
readme = "README.md"
keywords = ["parallel", "concurrent", "lock", "macro", "testing"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"

[dev-dependencies]
lazy_static = "1"
